--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -16,8 +16,8 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
-    <!--<context-param>-->
-        <!--<param-name>primefaces.THEME</param-name>-->
-        <!--<param-value>bluesky</param-value>-->
-    <!--</context-param>-->
+    <context-param>
+        <param-name>primefaces.THEME</param-name>
+        <param-value>redmond</param-value>
+    </context-param>
 </web-app>
